--- a/css/master.css
+++ b/css/master.css
@@ -17,10 +17,16 @@ ul{
 
 }
 
+a{
+    text-decoration: none;
+    color:#00425A;
+}
+
 h1{    font-family: 'Work Sans', sans-serif;
     color: #00425A;
     text-align: center;
     background-color: rgba(239, 245,245, 0.6);
+    margin: 10px;
 
 
 }
@@ -29,7 +35,7 @@ h2{font-family: 'Work Sans', sans-serif;
     color: #00425A;
     text-align: center;
     background-color: rgba(239, 245,245, 0.6);
-
+    margin: 10px;
 }
 
 h3{
@@ -37,6 +43,14 @@ h3{
     text-align: center;
 }
 
+button{
+ background-color: #181823;
+ color: #1F8A70;
+ border-radius: 10px;
+    min-height: 30px;
+    min-width: 150px;
+    
+}
 
 #logo{
     width: 10%;
@@ -67,7 +81,7 @@ height: 426px;
 }*/
 #titulo{
     position: absolute;
-    top: 123px;
+    top: 160px;
     font-size: 3rem;
     color: #181823 ;
     background-color: rgba(252  , 73, 00, 0.5);
@@ -95,16 +109,26 @@ display:inline;
 text-align: center;
 gap: 5px;}
 
-#PropuestaEducativa{
-    display: inline;
-
+#PorQueElegirnos{
+    margin-bottom: 15px;
+    margin-left: 5px;
 }
 
+#PropuestaEducativa{
+    display: inline;
+    
+}
+
+#PropuestaEdu{
+    margin-left: 50px;
+    
+}
 .card{
     background-color: #1F8A70;
     width: 18rem;
     align-items: center;
     gap: 5px;
+    margin-bottom: 10px;
 }
 
 .card-body{
@@ -113,12 +137,45 @@ gap: 5px;}
 
 .Noticias{
     text-align: center;
+    
+}
+ .botonVermas{
+   text-align:  center;
+ }
+
+.VerMas:hover{
+    background: #FC7300;
+    color: #181823;
+
+
 }
 
+ .News{
+    margin-bottom: 10px;
+
+ }
 #PiedePagina{
     font-family: 'Belanosima', sans-serif;
     font-weight: bold;
+    justify-content: center;
+    
 }
+
+#RRSS{
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+#Cntt{
+    text-align: center;
+    
+}
+#UntrefSchool{
+    justify-content: center;
+    margin-bottom: 5px;
+}
+
+
 @media (min-width: 768px){
 
     #Encabezado{
@@ -185,7 +242,12 @@ gap: 5px;}
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         background-color: #1F8A70;
+        
+    }
 
+    #PiedePagina{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
     }
 
 }
@@ -200,4 +262,4 @@ gap: 5px;}
         justify-content: center;
 
 
-}
+}}
