--- a/css/master.css
+++ b/css/master.css
@@ -6,6 +6,9 @@
     
 }
 
+html{
+    scroll-behavior: smooth;
+}
 
 img{
     width: 100%;
@@ -14,12 +17,15 @@ img{
 
 ul{
     list-style-type: none;
+    font-family: 'Work Sans', sans-serif;
+    font-size: larger;
+    color:#181823;
 
 }
 
 a{
     text-decoration: none;
-    color:#00425A;
+    color:#181823
 }
 
 h1{    font-family: 'Work Sans', sans-serif;
@@ -41,6 +47,7 @@ h2{font-family: 'Work Sans', sans-serif;
 h3{
     font-family: 'Work Sans', sans-serif;
     text-align: center;
+    background-color: #EfF5f5;
 }
 
 button{
@@ -51,6 +58,60 @@ button{
     min-width: 150px;
     
 }
+
+span{
+    font-family: 'Work Sans', sans-serif;
+
+
+}
+
+label{
+    display: block; 
+    float: center; 	
+    font-family: 'Work Sans', sans-serif;
+    color: #00425A;
+    height: 15ps;
+
+}
+input{
+	background-color:  #EfF5f5; 
+	width: 408px; 
+	height: 40px; 
+	border-radius: 5px;  
+	border-style: solid; 
+	border-width: 1px; 
+	border-color:#FC7300; 
+	margin-top: 10px;  
+	padding-left: 10px;
+  margin-bottom: 20px; 
+  font-family: 'Work Sans', sans-serif;
+
+}
+
+textarea{
+    background-color:  #EfF5f5; 
+      width: 405px; 
+      height: 150px; 
+      border-radius: 5px;  
+      border-style: solid; 
+      border-width: 1px; 
+      border: color #EfF5f5;
+      margin-top: 10px;  
+      padding-left: 10px;
+    margin-bottom: 20px; 
+    padding-top: 15px; 
+    font-family: 'Work Sans', sans-serif;
+
+  }
+  
+  
+  
+  
+  p{
+    font-family: 'Work Sans', sans-serif;
+
+
+  }
 
 #logo{
     width: 10%;
@@ -154,6 +215,9 @@ gap: 5px;}
     margin-bottom: 10px;
 
  }
+ #UltimasNoticias{
+    margin-bottom: 30px;
+ }
 #PiedePagina{
     font-family: 'Belanosima', sans-serif;
     font-weight: bold;
@@ -174,6 +238,25 @@ gap: 5px;}
     justify-content: center;
     margin-bottom: 5px;
 }
+
+
+.contact_form{	
+	width: 460px; 
+  height: auto;
+  margin: 80px auto;
+	border-radius: 10px;  
+	padding-top: 30px;
+	padding-bottom: 20px;  
+  background-color:#1F8A70; 
+  padding-left: 30px; 
+}
+
+ion-icon{
+    color:#181823;
+    font-size:large;  
+width: 80px; 
+height: 80px; }
+
 
 
 @media (min-width: 768px){
